objects/ssot__AgentWorkSkill__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AgentWorkId__c</fullName>
        <label>Agent Work</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AgentWorkSkill_SkillId_map_Skill_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AgentWorkSkill_SkillId_map_Skill_Id_N_1</label>
        <referenceTo>ssot__Skill__dlm</referenceTo>
        <relationshipLabel>AgentWorkSkill_SkillId_map_Skill_Id_N_1</relationshipLabel>
        <relationshipName>AgentWorkSkill_SkillId_map_Skill_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Agent Work Skill Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsAdditionalSkill__c</fullName>
        <label>Additional Skill</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsDropped__c</fullName>
        <label>Dropped</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SkillId__c</fullName>
        <label>Skill</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SkillLevel__c</fullName>
        <label>Skill Level</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SkillPriority__c</fullName>
        <label>Skill Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761235321_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AgentWork_PreferredUserId_map_User_I_rel</label>
        <referenceTo>ssot__Skill__dlm</referenceTo>
        <relationshipLabel>AgentWork_PreferredUserId_map_User_I_rel</relationshipLabel>
        <relationshipName>rel_1697761235321_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761235466_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ConvReasonReportSegmentDef_ConvReaso_rel</label>
        <referenceTo>ssot__Skill__dlm</referenceTo>
        <relationshipLabel>ConvReasonReportSegmentDef_ConvReaso_rel</relationshipLabel>
        <relationshipName>rel_1697761235466_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761235537_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ConversationEntryTranscriptExcerpt_C_rel</label>
        <referenceTo>ssot__Skill__dlm</referenceTo>
        <relationshipLabel>ConversationEntryTranscriptExcerpt_C_rel</relationshipLabel>
        <relationshipName>rel_1697761235537_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>